# trello-board-builder

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  exceptions.py  justfile  logger.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: settings.yaml
core/: board_manager.py  card_builder.py  trello_client.py
docs/: api.md  project-architecture.md  restructuring-plan.md  settings-reference.md  web-ui-feature-plan.md
inputs/: cards.json
shared/: __init__.py  exceptions.py  logger.py
tests/: test_config_loader.py  test_input_loader.py
utils/: config_loader.py  input_loader.py
web/: app.py  gemini_service.py  pipeline_runner.py  schemas.py
web/ui/: index.html  package-lock.json  package.json  vite.config.ts
web/ui/src/: App.tsx  index.css  types.ts
web/ui/src/api/: index.ts
web/ui/src/components/: Step1Input.tsx  Step2Preview.tsx  Step3Configure.tsx  Step4Build.tsx  StepIndicator.tsx
web/ui/src/utils/: colors.ts  date.ts
